Fix ports in per-team webs

--- a/tasks/web/json-config/deploy/docker-compose.yml
+++ b/tasks/web/json-config/deploy/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - celery
     ports:
-      - "5321:5321"
+      - "${SERVICE_PORT:-5321}:5321"
     volumes:
       - user-data:/data
     cpus: 0.5
