--- a/tasks/web/pdfme/deploy/docker-compose.yml
+++ b/tasks/web/pdfme/deploy/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     networks:
       - pdfer
     ports:
-    - "3334:3333"
+    - "${SERVICE_PORT:-3334}:3333"
     pids_limit: 256
     mem_limit: 512m
     cpus: 0.5
