--- a/tasks/reverse/simple-protocol/deploy/service/Dockerfile
+++ b/tasks/reverse/simple-protocol/deploy/service/Dockerfile
@@ -5,6 +5,8 @@ RUN apt-get install socat -yyq
 
 ADD --chown=root ./server /server
 ADD flag.txt /flag.txt
+RUN chmod ugo+rx /server && chmod ugo-w /server
+RUN chmod ugo+r /flag.txt && chmod ugo-wx /flag.txt
 
 WORKDIR /
 
