--- a/tasks/pwn/secure-notes-2/deploy/service/Dockerfile
+++ b/tasks/pwn/secure-notes-2/deploy/service/Dockerfile
@@ -1,8 +1,7 @@
 FROM ubuntu:latest
 
 RUN apt-get update && apt-get dist-upgrade && apt -y install qemu-system-x86
-RUN apt-get install cpio socat python3 python3-pip -yyq
-RUN pip install requests
+RUN apt-get install cpio socat python3 -yyq
 
 RUN mkdir -p /task/fs
 RUN mkdir -p /task/kernel
@@ -10,6 +9,13 @@ RUN mkdir -p /task/kernel
 COPY bzImage /task/kernel/
 COPY compr.sh  decompress.sh initramfs.cpio.gz  run.sh /task/fs/
 COPY deploy_manager.py /
+RUN chmod ugo+rx /deploy_manager && chmod ugo-w /deploy_manager
+RUN chmod ugo+rx /task/fs/run.sh && chmod ugo-w /task/fs/run.sh
+RUN chmod ugo+rx /task/fs/decompress.sh && chmod ugo-w /task/fs/decompress.sh
+RUN chmod ugo+rx /task/fs/compr.sh && chmod ugo-w /task/fs/compr.sh
+RUN chmod ugo+rx /task/fs/initramfs.cpio.gz && chmod ugo-w /task/fs/initramfs.cpio.gz
+RUN chmod ugo+rx /task/kernel/bzImage && chmod ugo-w /task/fs/bzImage
+
 ENV  PYTHONUNBUFFERED true
 
 WORKDIR /
