--- a/tasks/web/search-engine/deploy/docker-compose.yml
+++ b/tasks/web/search-engine/deploy/docker-compose.yml
@@ -6,14 +6,22 @@ services:
     mem_limit: 512m
     pids_limit: 1024
     cpus: 1
+    volumes:
+      - msdata:/data.ms
     networks:
       - private-search
   chouse:
     image: yandex/clickhouse-server
     restart: on-failure
     mem_limit: 512m
-    pids_limit: 1024
+    volumes:
+      - chdata:/var/lib/clickhouse
     cpus: 1
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 262144
+        hard: 262144
     networks:
       - private-search
   backend:
